--- a/Atlantis RL PCO .ipynb
+++ b/Atlantis RL PCO .ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import necessary libraries\n",
     "import gym  \n",
     "from stable_baselines3 import PPO  \n",
     "from stable_baselines3.common.vec_env import VecFrameStack  \n",
@@ -22,8 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create and configure the Atari environment\n",
     "env = make_atari_env('ALE/Atlantis-v5', n_envs=4, seed=0)  \n",
-    "env = VecFrameStack(env, n_stack=4)  "
+    "env = VecFrameStack(env, n_stack=4)  # Stack frames to provide temporal context to the model"
    ]
   },
   {
@@ -33,8 +35,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the path for logging TensorBoard information\n",
     "log_path = os.path.join('Training', 'Logs')\n",
     "\n",
+    "# Initialize the PPO model with a CNN policy\n",
     "model = PPO('CnnPolicy', env, verbose=1, tensorboard_log=log_path)"
    ]
   },
@@ -45,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the PPO model\n",
     "model.learn(total_timesteps=2000000)"
    ]
   },
@@ -55,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the path for saving the trained model\n",
     "ppo_path = os.path.join('Training', 'Saved Models', 'PPO_Atlantis_2MT')"
    ]
   },
@@ -65,6 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the trained model to the specified path\n",
     "model.save(ppo_path)"
    ]
   },
@@ -75,6 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clean up by deleting the current model instance\n",
     "del model"
    ]
   },
@@ -85,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the trained model from the saved path\n",
     "model = PPO.load(ppo_path, env)"
    ]
   },
@@ -95,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = make_atari_env('ALE/Atlantis-v5', n_envs=1, seed=0)  # Evaluate sadece 1 env de çalışır\n",
+    "# Reinitialize the environment for evaluation with a single instance\n",
+    "env = make_atari_env('ALE/Atlantis-v5', n_envs=1, seed=0)  # Evaluation requires only one environment instance\n",
     "env = VecFrameStack(env, n_stack=4)  "
    ]
   },
@@ -106,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Evaluate the performance of the trained model\n",
     "evaluate_policy(model, env, n_eval_episodes=10, render=True)"
    ]
   },
@@ -116,13 +127,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import time library for real-time rendering\n",
     "import time\n",
     "\n",
+    "# Reset the environment and start the loop for real-time gameplay\n",
     "obs = env.reset()\n",
     "while True:\n",
+    "    # Predict the next action based on the current observation\n",
     "    action, _states = model.predict(obs)\n",
+    "    # Take the action and receive the next observation, reward, and done flag\n",
     "    obs, rewards, dones, info = env.step(action)\n",
+    "    # Render the environment to visualize the gameplay\n",
     "    env.render('human')\n",
+    "    # Pause briefly to slow down the rendering loop\n",
     "    time.sleep(0.1)"
    ]
   },
